<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Master of Theme</string>

    <string name="appcompat_title">AppCompat</string>
    <string name="material_components_title">Material Components</string>

    <string name="colors">Colors</string>
    <string name="buttons">Buttons</string>
    <string name="texts">Texts</string>
    <string name="forms">Forms</string>
    <string name="actions">Actions</string>
    <string name="components">Components</string>

    <string name="dark_mode">Dark mode</string>


    <string name="appcompat_buttons">Buttons</string>
    <string name="appcompat_texts">Texts</string>
    <string name="appcompat_components">Components</string>
    <string name="appcompat_buttons_button">Button</string>

    <string name="components_toolbar_title">Toolbar title</string>
    <string name="components_toolbar_subtitle">Toolbar subtitle</string>

</resources>
