<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/space_16dp">

            <!--==================== Colors ====================-->
            <TextView
                style="@style/Title"
                android:layout_marginTop="0dp"
                android:text="@string/colors" />

            <include layout="@layout/layout_material_components_colors" />


            <!--==================== Buttons ====================-->
            <TextView
                style="@style/Title"
                android:text="@string/buttons" />

            <include layout="@layout/layout_material_components_buttons" />


            <!--==================== Texts ====================-->
            <TextView
                style="@style/Title"
                android:text="@string/texts" />

            <include layout="@layout/layout_material_components_texts" />


            <!--==================== Forms ====================-->
            <TextView
                style="@style/Title"
                android:text="@string/forms" />

            <include
                android:id="@+id/forms"
                layout="@layout/layout_material_components_forms" />


            <!--==================== Actions ====================-->
            <TextView
                style="@style/Title"
                android:text="@string/actions" />

            <include
                android:id="@+id/actions"
                layout="@layout/layout_material_components_actions" />


            <!--&lt;!&ndash;==================== Components ====================&ndash;&gt;-->
            <!--<TextView-->
            <!--style="@style/Title"-->
            <!--android:text="@string/components" />-->

            <!--<include-->
            <!--android:id="@+id/components"-->
            <!--layout="@layout/layout_material_components_components" />-->
        </LinearLayout>

    </ScrollView>

</layout>