<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/space_16dp">

            <!--==================== Buttons ====================-->
            <TextView
                style="@style/Title"
                android:layout_marginTop="0dp"
                android:text="@string/buttons" />

            <include layout="@layout/layout_appcompat_buttons" />


            <!--==================== Texts ====================-->
            <TextView
                style="@style/Title"
                android:text="@string/texts" />

            <include layout="@layout/layout_appcompat_texts" />


            <!--==================== Forms ====================-->
            <TextView
                style="@style/Title"
                android:text="@string/forms" />

            <include
                android:id="@+id/forms"
                layout="@layout/layout_appcompat_forms" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>