<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/space_16dp">

            <!--==================== Colors ====================-->
            <TextView
                style="@style/Title"
                android:layout_marginTop="0dp"
                android:text="@string/colors" />

            <include layout="@layout/layout_appcompat_colors" />

            <include layout="@layout/layout_appcompat_color_texts" />


            <!--==================== Buttons ====================-->
            <TextView
                style="@style/Title"
                android:text="@string/buttons" />

            <include layout="@layout/layout_appcompat_buttons" />


            <!--==================== Texts ====================-->
            <TextView
                style="@style/Title"
                android:text="@string/texts" />

            <include layout="@layout/layout_appcompat_texts" />

            <TextView
                style="@style/LabelText"
                android:text="EditText(Empty)" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4dp"
                android:hint="EditText"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:targetApi="o" />

            <TextView
                style="@style/LabelText"
                android:text="EditText(Filled)" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="EditText"
                tools:targetApi="o" />

            <TextView
                style="@style/LabelText"
                android:text="TextInputLayout(Empty)" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4dp"
                android:hint="TextInputLayout">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="TextInputLayout"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:targetApi="o" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/LabelText"
                android:text="TextInputLayout(Filled)" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="TextInputLayout"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="TextInputLayout"
                    tools:targetApi="o" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/LabelText"
                android:text="TextInputLayout(Error)" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4dp"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="TextInputLayout"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="TextInputLayout"
                    tools:targetApi="o" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="@dimen/space_16dp">

                <TextView
                    style="@style/LabelText"
                    android:text="CardView" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="@dimen/space_16dp"
                        android:text="CardView" />

                </androidx.cardview.widget.CardView>

                <TextView
                    style="@style/LabelText"
                    android:text="FloatingActionButton" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_4dp"
                    android:src="@drawable/ic_close_24dp" />

                <TextView
                    style="@style/LabelText"
                    android:text="AlertDialog" />

                <Button
                    android:id="@+id/alert_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="AlertDialog" />

                <TextView
                    style="@style/LabelText"
                    android:text="BottomSheet" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>